# alt-ergo-docker-images

./: .gitignore  Dockerfile-aeg-2-4-1  Dockerfile-aes-0-95-2  Dockerfile-aes-0-99-1  Dockerfile-aes-1-01  Dockerfile-aes-1-30  Dockerfile-aes-2-0-0  Dockerfile-aes-2-1-0  Dockerfile-aes-2-2-0  Dockerfile-aes-2-3-0  Dockerfile-aes-2-3-1  Dockerfile-aes-2-3-2  Dockerfile-aes-2-3-3  Dockerfile-aes-2-4-0  Dockerfile-aes-2-4-1  Dockerfile.gui_template  Dockerfile.template  Draft_Dockerfile.template  Makefile  README.md  altgr-ergo.conf  makefile.yml
.github/workflows/: makefile.yml
ae_base_image_test/: 157--f_loop_inv_Positive_preserved_Alt-Ergo.ae  Dockerfile  agree181.smt2  aliases.sh  test.ae  test2.ae
ae_tests_old/: Dockerfile
alt_ergo_docker_images/: .ocamlformat  alt_ergo_docker_images.opam  dune-project
alt_ergo_docker_images/lib/: dune
alt_ergo_docker_images/src/: dune  main.ml
alt_ergo_docker_images/test/: alt_ergo_docker_images.ml  dune
cvc/: TODO
cvc/cvc4-images/: Dockerfile  Dockerfile.template
cvc/cvc5-images/: Dockerfile
old_ae_comp/: Dockerfile
old_ae_pre1/: Dockerfile
z3-image/: Dockerfile
